data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1456.wast
;; 7. **Test Description**: Implement a scenario where a `br_if` is used in a function with valid function cardinality, but incorrect conditional branch management results in stack operand misalignment, triggering a generic or specific error message.   - **Constraint Being Checked**: Consistent execution of branch conditions to maintain stack alignment for functions.   - **Stack Corruption Aspect**: Misalignment of operands on the stack due to incorrect branch handling affects function execution and return value integrity.

(assert_invalid
  (module (func $test-function-cardinality
    (block (result i32)
      (block (result i32)
        (i32.const 42)
        (br_if 1 (i32.const 1))
        (i32.const 12)
      )
      (br_if 0 (i32.const 1))
    )
    (drop)
  ))
  "stack misalignment"
)